qc-新菜單後台 - 調整1.題型popup列表移除更新時間 2.標籤改為多選
1. 加購題型與選項 popup - 移除"更新時間"
2. 基本資料內設定商品標籤 - 下拉改為多選

--- a/quickclick/menu-new-2-add-product-0.html
+++ b/quickclick/menu-new-2-add-product-0.html
@@ -89,9 +89,9 @@
                                 <div class="add-group-name">
                                     <p>題型名稱</p>
                                 </div>
-                                <div class="add-group-time">
+                                <!-- <div class="add-group-time">
                                     <p>更新時間</p>
-                                </div>
+                                </div> -->
                                 <div class="add-group-tools">
                                     <p>操作設定</p>
                                 </div>
@@ -106,9 +106,9 @@
                                     <p>甜度</p>
                                     <p class="group-info">此題型目前包含：全糖、半糖、微糖、無糖</p>
                                 </div>
-                                <div class="add-group-time">
+                                <!-- <div class="add-group-time">
                                     <p>09/12 週一 11:38:24</p>
-                                </div>
+                                </div> -->
                                 <div class="add-group-tools">
                                     <a href="menu-new-2-add-product-2-new.html"><i class="fas fa-cog"></i></a>
                                     <a href="#"><i class="far fa-copy"></i></a>
@@ -124,9 +124,9 @@
                                     <p>尺寸</p>
                                     <p class="group-info">此題型目前包含：大大杯、中杯、小杯、大杯、特中杯、迷你小杯</p>
                                 </div>
-                                <div class="add-group-time">
+                                <!-- <div class="add-group-time">
                                     <p>09/12 週一 11:38:24</p>
-                                </div>
+                                </div> -->
                                 <div class="add-group-tools">
                                     <a href="#"><i class="fas fa-cog"></i></a>
                                     <a href="#"><i class="far fa-copy"></i></a>
@@ -142,9 +142,9 @@
                                     <p>尺寸</p>
                                     <p class="group-info">此題型目前包含：大杯、中杯、小杯</p>
                                 </div>
-                                <div class="add-group-time">
+                                <!-- <div class="add-group-time">
                                     <p>09/12 週一 11:38:24</p>
-                                </div>
+                                </div> -->
                                 <div class="add-group-tools">
                                     <a href="#"><i class="fas fa-cog"></i></a>
                                     <a href="#"><i class="far fa-copy"></i></a>
@@ -160,9 +160,9 @@
                                     <p>尺寸</p>
                                     <p class="group-info">此題型目前包含：大杯、中杯、小杯</p>
                                 </div>
-                                <div class="add-group-time">
+                                <!-- <div class="add-group-time">
                                     <p>09/12 週一 11:38:24</p>
-                                </div>
+                                </div> -->
                                 <div class="add-group-tools">
                                     <a href="#"><i class="fas fa-cog"></i></a>
                                     <a href="#"><i class="far fa-copy"></i></a>
@@ -178,9 +178,9 @@
                                     <p>尺寸</p>
                                     <p class="group-info">此題型目前包含：大杯、中杯、小杯</p>
                                 </div>
-                                <div class="add-group-time">
+                                <!-- <div class="add-group-time">
                                     <p>09/12 週一 11:38:24</p>
-                                </div>
+                                </div> -->
                                 <div class="add-group-tools">
                                     <a href="#"><i class="fas fa-cog"></i></a>
                                     <a href="#"><i class="far fa-copy"></i></a>
@@ -196,9 +196,9 @@
                                     <p>尺寸</p>
                                     <p class="group-info">此題型目前包含：大杯、中杯、小杯</p>
                                 </div>
-                                <div class="add-group-time">
+                                <!-- <div class="add-group-time">
                                     <p>09/12 週一 11:38:24</p>
-                                </div>
+                                </div> -->
                                 <div class="add-group-tools">
                                     <a href="#"><i class="fas fa-cog"></i></a>
                                     <a href="#"><i class="far fa-copy"></i></a>
@@ -214,9 +214,9 @@
                                     <p>尺寸</p>
                                     <p class="group-info">此題型目前包含：大杯、中杯、小杯</p>
                                 </div>
-                                <div class="add-group-time">
+                                <!-- <div class="add-group-time">
                                     <p>09/12 週一 11:38:24</p>
-                                </div>
+                                </div> -->
                                 <div class="add-group-tools">
                                     <a href="#"><i class="fas fa-cog"></i></a>
                                     <a href="#"><i class="far fa-copy"></i></a>
@@ -232,9 +232,9 @@
                                     <p>尺寸</p>
                                     <p class="group-info">此題型目前包含：大杯、中杯、小杯</p>
                                 </div>
-                                <div class="add-group-time">
+                                <!-- <div class="add-group-time">
                                     <p>09/12 週一 11:38:24</p>
-                                </div>
+                                </div> -->
                                 <div class="add-group-tools">
                                     <a href="#"><i class="fas fa-cog"></i></a>
                                     <a href="#"><i class="far fa-copy"></i></a>
@@ -250,9 +250,9 @@
                                     <p>冰淇淋</p>
                                     <p class="group-info">此題型目前包含：抹茶、草莓、巧克力、香草、紅豆、花生、黑糖、芋頭</p>
                                 </div>
-                                <div class="add-group-time">
+                                <!-- <div class="add-group-time">
                                     <p>09/12 週一 11:38:24</p>
-                                </div>
+                                </div> -->
                                 <div class="add-group-tools">
                                     <a href="#"><i class="fas fa-cog"></i></a>
                                     <a href="#"><i class="far fa-copy"></i></a>
