--- a/quickclick/menu-new-2-add-product-1.html
+++ b/quickclick/menu-new-2-add-product-1.html
@@ -40,9 +40,9 @@
                                 <div class="add-group-name">
                                     <p>題型名稱</p>
                                 </div>
-                                <div class="add-group-time">
+                                <!-- <div class="add-group-time">
                                     <p>更新時間</p>
-                                </div>
+                                </div> -->
                                 <div class="add-group-tools">
                                     <p>操作設定</p>
                                 </div>
@@ -57,9 +57,9 @@
                                     <p>甜度</p>
                                     <p class="group-info">此題型目前包含：全糖、半糖、微糖、無糖</p>
                                 </div>
-                                <div class="add-group-time">
+                                <!-- <div class="add-group-time">
                                     <p>09/12 週一 11:38:24</p>
-                                </div>
+                                </div> -->
                                 <div class="add-group-tools">
                                     <a href="#"><i class="fas fa-cog"></i></a>
                                     <a href="#"><i class="far fa-copy"></i></a>
@@ -75,9 +75,9 @@
                                     <p>尺寸</p>
                                     <p class="group-info">此題型目前包含：大大杯、中杯、小杯、大杯、特中杯、迷你小杯</p>
                                 </div>
-                                <div class="add-group-time">
+                                <!-- <div class="add-group-time">
                                     <p>09/12 週一 11:38:24</p>
-                                </div>
+                                </div> -->
                                 <div class="add-group-tools">
                                     <a href="#"><i class="fas fa-cog"></i></a>
                                     <a href="#"><i class="far fa-copy"></i></a>
@@ -93,9 +93,9 @@
                                     <p>尺寸</p>
                                     <p class="group-info">此題型目前包含：大杯、中杯、小杯</p>
                                 </div>
-                                <div class="add-group-time">
+                                <!-- <div class="add-group-time">
                                     <p>09/12 週一 11:38:24</p>
-                                </div>
+                                </div> -->
                                 <div class="add-group-tools">
                                     <a href="#"><i class="fas fa-cog"></i></a>
                                     <a href="#"><i class="far fa-copy"></i></a>
@@ -111,9 +111,9 @@
                                     <p>尺寸</p>
                                     <p class="group-info">此題型目前包含：大杯、中杯、小杯</p>
                                 </div>
-                                <div class="add-group-time">
+                                <!-- <div class="add-group-time">
                                     <p>09/12 週一 11:38:24</p>
-                                </div>
+                                </div> -->
                                 <div class="add-group-tools">
                                     <a href="#"><i class="fas fa-cog"></i></a>
                                     <a href="#"><i class="far fa-copy"></i></a>
@@ -129,9 +129,9 @@
                                     <p>尺寸</p>
                                     <p class="group-info">此題型目前包含：大杯、中杯、小杯</p>
                                 </div>
-                                <div class="add-group-time">
+                                <!-- <div class="add-group-time">
                                     <p>09/12 週一 11:38:24</p>
-                                </div>
+                                </div> -->
                                 <div class="add-group-tools">
                                     <a href="#"><i class="fas fa-cog"></i></a>
                                     <a href="#"><i class="far fa-copy"></i></a>
@@ -147,9 +147,9 @@
                                     <p>尺寸</p>
                                     <p class="group-info">此題型目前包含：大杯、中杯、小杯</p>
                                 </div>
-                                <div class="add-group-time">
+                                <!-- <div class="add-group-time">
                                     <p>09/12 週一 11:38:24</p>
-                                </div>
+                                </div> -->
                                 <div class="add-group-tools">
                                     <a href="#"><i class="fas fa-cog"></i></a>
                                     <a href="#"><i class="far fa-copy"></i></a>
@@ -165,9 +165,9 @@
                                     <p>尺寸</p>
                                     <p class="group-info">此題型目前包含：大杯、中杯、小杯</p>
                                 </div>
-                                <div class="add-group-time">
+                                <!-- <div class="add-group-time">
                                     <p>09/12 週一 11:38:24</p>
-                                </div>
+                                </div> -->
                                 <div class="add-group-tools">
                                     <a href="#"><i class="fas fa-cog"></i></a>
                                     <a href="#"><i class="far fa-copy"></i></a>
@@ -183,9 +183,9 @@
                                     <p>尺寸</p>
                                     <p class="group-info">此題型目前包含：大杯、中杯、小杯</p>
                                 </div>
-                                <div class="add-group-time">
+                                <!-- <div class="add-group-time">
                                     <p>09/12 週一 11:38:24</p>
-                                </div>
+                                </div> -->
                                 <div class="add-group-tools">
                                     <a href="#"><i class="fas fa-cog"></i></a>
                                     <a href="#"><i class="far fa-copy"></i></a>
@@ -201,9 +201,9 @@
                                     <p>冰淇淋</p>
                                     <p class="group-info">此題型目前包含：抹茶、草莓、巧克力、香草、紅豆、花生、黑糖、芋頭</p>
                                 </div>
-                                <div class="add-group-time">
+                                <!-- <div class="add-group-time">
                                     <p>09/12 週一 11:38:24</p>
-                                </div>
+                                </div> -->
                                 <div class="add-group-tools">
                                     <a href="#"><i class="fas fa-cog"></i></a>
                                     <a href="#"><i class="far fa-copy"></i></a>
