--- a/quickclick/menu-new-2-add-product-4.html
+++ b/quickclick/menu-new-2-add-product-4.html
@@ -46,9 +46,9 @@
                                 <div class="add-sell">
                                     <p>停售設定</p>
                                 </div>
-                                <div class="add-group-time">
+                                <!-- <div class="add-group-time">
                                     <p>更新時間</p>
-                                </div>
+                                </div> -->
                                 <div class="add-group-tools">
                                     <p>操作設定</p>
                                 </div>
@@ -71,9 +71,9 @@
                                 <div class="add-sell">
                                     <p class="c-green">上架中</p>
                                 </div>
-                                <div class="add-group-time">
+                                <!-- <div class="add-group-time">
                                     <p>09/12 週一 11:38:24</p>
-                                </div>
+                                </div> -->
                                 <div class="add-group-tools">
                                     <a href="#"><i class="fas fa-cog"></i></a>
                                     <a href="#"><i class="far fa-copy"></i></a>
@@ -94,9 +94,9 @@
                                 <div class="add-sell">
                                     <p>下架中</p>
                                 </div>
-                                <div class="add-group-time">
+                                <!-- <div class="add-group-time">
                                     <p>09/12 週一 11:38:24</p>
-                                </div>
+                                </div> -->
                                 <div class="add-group-tools">
                                     <a href="#"><i class="fas fa-cog"></i></a>
                                     <a href="#"><i class="far fa-copy"></i></a>
@@ -117,9 +117,9 @@
                                 <div class="add-sell">
                                     <p>下架中</p>
                                 </div>
-                                <div class="add-group-time">
+                                <!-- <div class="add-group-time">
                                     <p>09/12 週一 11:38:24</p>
-                                </div>
+                                </div> -->
                                 <div class="add-group-tools">
                                     <a href="#"><i class="fas fa-cog"></i></a>
                                     <a href="#"><i class="far fa-copy"></i></a>
@@ -140,9 +140,9 @@
                                 <div class="add-sell">
                                     <p>下架中</p>
                                 </div>
-                                <div class="add-group-time">
+                                <!-- <div class="add-group-time">
                                     <p>09/12 週一 11:38:24</p>
-                                </div>
+                                </div> -->
                                 <div class="add-group-tools">
                                     <a href="#"><i class="fas fa-cog"></i></a>
                                     <a href="#"><i class="far fa-copy"></i></a>
@@ -163,9 +163,9 @@
                                 <div class="add-sell">
                                     <p>下架中</p>
                                 </div>
-                                <div class="add-group-time">
+                                <!-- <div class="add-group-time">
                                     <p>09/12 週一 11:38:24</p>
-                                </div>
+                                </div> -->
                                 <div class="add-group-tools">
                                     <a href="#"><i class="fas fa-cog"></i></a>
                                     <a href="#"><i class="far fa-copy"></i></a>
@@ -186,9 +186,9 @@
                                 <div class="add-sell">
                                     <p class="c-green">上架中</p>
                                 </div>
-                                <div class="add-group-time">
+                                <!-- <div class="add-group-time">
                                     <p>09/12 週一 11:38:24</p>
-                                </div>
+                                </div> -->
                                 <div class="add-group-tools">
                                     <a href="#"><i class="fas fa-cog"></i></a>
                                     <a href="#"><i class="far fa-copy"></i></a>
@@ -209,9 +209,9 @@
                                 <div class="add-sell">
                                     <p class="c-green">上架中</p>
                                 </div>
-                                <div class="add-group-time">
+                                <!-- <div class="add-group-time">
                                     <p>09/12 週一 11:38:24</p>
-                                </div>
+                                </div> -->
                                 <div class="add-group-tools">
                                     <a href="#"><i class="fas fa-cog"></i></a>
                                     <a href="#"><i class="far fa-copy"></i></a>
@@ -232,9 +232,9 @@
                                 <div class="add-sell">
                                     <p class="c-green">上架中</p>
                                 </div>
-                                <div class="add-group-time">
+                                <!-- <div class="add-group-time">
                                     <p>09/12 週一 11:38:24</p>
-                                </div>
+                                </div> -->
                                 <div class="add-group-tools">
                                     <a href="#"><i class="fas fa-cog"></i></a>
                                     <a href="#"><i class="far fa-copy"></i></a>
@@ -255,9 +255,9 @@
                                 <div class="add-sell">
                                     <p>下架中</p>
                                 </div>
-                                <div class="add-group-time">
+                                <!-- <div class="add-group-time">
                                     <p>09/12 週一 11:38:24</p>
-                                </div>
+                                </div> -->
                                 <div class="add-group-tools">
                                     <a href="#"><i class="fas fa-cog"></i></a>
                                     <a href="#"><i class="far fa-copy"></i></a>
@@ -278,9 +278,9 @@
                                 <div class="add-sell">
                                     <p>下架中</p>
                                 </div>
-                                <div class="add-group-time">
+                                <!-- <div class="add-group-time">
                                     <p>09/12 週一 11:38:24</p>
-                                </div>
+                                </div> -->
                                 <div class="add-group-tools">
                                     <a href="#"><i class="fas fa-cog"></i></a>
                                     <a href="#"><i class="far fa-copy"></i></a>
