--- a/quickclick/menu-new-2.html
+++ b/quickclick/menu-new-2.html
@@ -284,12 +284,30 @@
                             <fieldset class="clearfix">
                                 <label class="item-title">商品標籤</label>
                                 <div class="fillin-box">
-                                    <div class="the-select">
+                                    <div class="create-text clearfix">
+                                        <div class="enter_new">
+                                            <input type="text" value="" placeholder="請輸入標籤文字">
+                                            <a class="add-icon"></a>
+                                        </div>
+                                    </div>
+                                    <!-- <div class="the-select">
                                         <select class="" name="">
                                             <option value="0" selected="">請選擇商品標籤</option>
                                             <option value="1">西班牙豬肉</option>
                                             <option value="2">韓國泡菜</option>
                                         </select>
+                                    </div> -->
+                                    <p class="note">或點選下方快速建立</p>
+                                    <div class="shortcut-list clearfix">
+                                        <a class="hashtag">
+                                            <p>西班牙豬肉</p>
+                                        </a>
+                                        <a class="hashtag">
+                                            <p>韓國泡菜</p>
+                                        </a>
+                                        <a class="hashtag">
+                                            <p>德國豬</p>
+                                        </a>
                                     </div>
                                     <p class="go-setting">
                                         <a href="#">商品標籤設定</a>
