紅利桃子 - 新增台北富邦銀行按鈕連結 + 移除 demo 富邦頁面

--- a/iiot/peach/index.html
+++ b/iiot/peach/index.html
@@ -264,10 +264,15 @@
                                 </a>
                             </li>
                             <li>
+                                <a class="tycg-photo" href=" https://open.tycard.app/fubon/20220801" target="_blank">
+                                    <img src="images/other_event_02.png" alt="台北富邦銀行">
+                                </a>
+                            </li>
+                            <!-- <li>
                                 <a class="tycg-photo">
                                     <img src="images/other_event_comingsoon.png" alt="coming soon">
                                 </a>
-                            </li>
+                            </li> -->
                         </ul>
                     </div>
 
