紅利桃子 - 新增經發局 音樂微醺 活動

--- a/iiot/peach/index.html
+++ b/iiot/peach/index.html
@@ -248,6 +248,13 @@
                                     <img src="images/img-event-04.png" alt="經發局 - 逛夜市送100點">
                                 </a>
                             </li>
+                            <li>
+                                <a class="tycg-photo"
+                                    href="https://www.2022taoyuanfood.com.tw/"
+                                    target="_blank">
+                                    <img src="images/img-event-05.png" alt="經發局 - 音樂 微醺 最高可獲300點">
+                                </a>
+                            </li>
                         </ul>
                         <p class="text-remark">※ 以上活動辦法依各局處活動官網為準。<br>
                         ※ 各局處活動得獎者公布後，隔週三進行點數發放，註冊登入紅利桃子後即可查詢點數資訊。</p>
